# popmgr

./: Cargo.toml  README.md  install.sh  popmgr.desktop
assets/: icon.rgba
docs/: kernel-known-issues.md
src/: main.rs  runner.rs
src/ui/: apps.rs  audio.rs  cosmic_tweaks.rs  disk.rs  display.rs  ime.rs  mod.rs  usb.rs
