[package]
name = "popmgr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "popmgr"
path = "src/main.rs"

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
